--- a/public/teacher.html
+++ b/public/teacher.html
@@ -68,7 +68,7 @@
         .navbar-menu {
             display: flex;
             align-items: center;
-            gap: 30px;
+            gap: 15px;
             list-style: none;
         }
 
@@ -77,7 +77,7 @@
             text-decoration: none;
             font-weight: 600;
             font-size: 1em;
-            padding: 8px 16px;
+            padding: 8px 10px;
             border-radius: 8px;
             transition: all 0.3s ease;
             position: relative;
@@ -412,12 +412,10 @@
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
-                <li><a href="/ratings.html" class="navbar-link">Ratings</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
+                <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
                 <li><a href="/teacher.html" class="navbar-link active">Teacher Panel</a></li>
-                <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
                 <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
-                <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
             <div class="navbar-auth">
