--- a/public/test-page.html
+++ b/public/test-page.html
@@ -147,8 +147,8 @@
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
+                <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
-                <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
                 <li><a href="/test-page.html" class="navbar-link active">Test Page</a></li>
             </ul>
 
