Add project icon from Column M in Google Sheets for cover images

--- a/public/index.html
+++ b/public/index.html
@@ -1723,7 +1723,7 @@
                                 description: p.description || '',
                                 videos: parts.map(part => part.youtubeUrl),
                                 videoCount: parts.length,
-                                icon: null,
+                                icon: p.icon || null,  // Use icon from Column M
                                 pdf: null
                             };
                         });
@@ -1934,7 +1934,9 @@
                                     ${badgeHTML}
                                     <div class="project-icon">
                                         ${project.icon
-                            ? `<img src="/projects/${encodeURIComponent(project.id)}/${encodeURIComponent(project.icon)}" alt="${project.name}">`
+                            ? (project.icon.startsWith('http')
+                                ? `<img src="${project.icon}" alt="${project.name}" onerror="this.parentNode.innerHTML='🎮'">`
+                                : `<img src="/projects/${encodeURIComponent(project.id)}/${encodeURIComponent(project.icon)}" alt="${project.name}">`)
                             : '🎮'
                         }
                                     </div>
