--- a/public/index.html
+++ b/public/index.html
@@ -614,6 +614,35 @@
             }
         }
 
+        /* Lock Overlay for Restricted Projects */
+        .locked-project {
+            position: relative;
+        }
+
+        .locked-project::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
+            pointer-events: none;
+            z-index: 5;
+        }
+
+        .lock-overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3em;
+            z-index: 10;
+            opacity: 0.9;
+            filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.5));
+        }
+
         .section-header {
             max-width: 1200px;
             margin: 30px auto 15px;
@@ -1906,6 +1935,35 @@
                 return `/projects/${encodeURIComponent(projectId)}/${encodeURIComponent(icon)}`;
             }
 
+            // Show message when clicking a locked project
+            function showLockedMessage() {
+                // Create toast notification
+                const toast = document.createElement('div');
+                toast.style.cssText = `
+                    position: fixed;
+                    top: 20px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    background: linear-gradient(135deg, #F59E0B, #D97706);
+                    color: white;
+                    padding: 15px 30px;
+                    border-radius: 30px;
+                    font-weight: bold;
+                    font-size: 1.1em;
+                    box-shadow: 0 8px 25px rgba(217, 119, 6, 0.4);
+                    z-index: 10000;
+                    animation: slideDown 0.3s ease-out;
+                `;
+                toast.innerHTML = '🔒 This project is locked. Complete your assigned projects first!';
+                document.body.appendChild(toast);
+
+                // Remove after 3 seconds
+                setTimeout(() => {
+                    toast.style.animation = 'fadeUp 0.3s ease-out forwards';
+                    setTimeout(() => document.body.removeChild(toast), 300);
+                }, 3000);
+            }
+
             // Display projects
             function displayProjects(projects, categoryTitle = 'All Projects') {
                 const content = document.getElementById('content');
@@ -1953,13 +2011,21 @@
                         badgeHTML = '<div class="in-progress-badge">⏳ IN PROGRESS</div>';
                     }
 
+                    // Check if user has access to all projects
+                    const hasAccess = localStorage.getItem('allProjectAccess') === 'yes';
+                    const isLocked = currentStudent && !hasAccess && !isCompleted && !inProgress;
+
+                    // Lock overlay HTML
+                    const lockOverlayHTML = isLocked ? `<div class="lock-overlay">🔒</div>` : '';
+
                     return `
-                                <div class="project-card ${isCompleted ? 'completed-project' : (inProgress ? 'in-progress-project' : '')}" 
-                                     onclick="openProject('${project.id}')"
+                                <div class="project-card ${isCompleted ? 'completed-project' : (inProgress ? 'in-progress-project' : '')} ${isLocked ? 'locked-project' : ''}" 
+                                     onclick="${isLocked ? 'showLockedMessage()' : `openProject('${project.id}')`}"
                                      data-demo-url="${demoUrl}"
                                      onmouseenter="playDemoVideo(this)"
                                      onmouseleave="stopDemoVideo(this)">
                                     ${badgeHTML}
+                                    ${lockOverlayHTML}
                                     <div class="project-icon">
                                         ${project.icon
                             ? `<img src="${getIconUrl(project.icon, project.id)}" alt="${project.name}" onerror="this.parentNode.innerHTML='🎮'">`
@@ -2341,6 +2407,8 @@
                 studentList.innerHTML = students.map(student => {
                     const name = typeof student === 'object' ? student.name : student;
                     const headshot = (typeof student === 'object' && student.headshot) ? student.headshot : null;
+                    const fileLink = (typeof student === 'object' && student.fileLink) ? student.fileLink : '';
+                    const allProjectAccess = (typeof student === 'object' && student.allProjectAccess) ? 'true' : 'false';
 
                     let headshotUrl = headshot;
                     if (headshotUrl) {
@@ -2357,7 +2425,7 @@
                         : `<div class="student-initial">${name.charAt(0)}</div>`;
 
                     return `
-                    <div class="student-item" onclick="selectStudent('${name.replace(/'/g, "\'")}')">
+                    <div class="student-item" onclick="selectStudent('${name.replace(/'/g, "\\'")}', '${fileLink.replace(/'/g, "\\'")}', ${allProjectAccess})">
                         ${headshotHtml}
                         <span class="student-name">${name}</span>
                     </div>
@@ -2375,7 +2443,7 @@
             });
 
             // Select a student
-            function selectStudent(studentName, fileLink = null) {
+            function selectStudent(studentName, fileLink = null, allProjectAccess = false) {
                 currentStudent = studentName;
                 localStorage.setItem('currentStudent', studentName);
 
@@ -2385,6 +2453,9 @@
                 } else {
                     localStorage.removeItem('currentStudentFileLink');
                 }
+
+                // Save all project access permission
+                localStorage.setItem('allProjectAccess', allProjectAccess ? 'yes' : 'no');
 
                 updateLoginButton();
 
@@ -2396,6 +2467,11 @@
 
                 // Fetch files for sidebar
                 fetchStudentFiles(studentName);
+
+                // Refresh project display to show/hide locks
+                if (allProjects.length > 0) {
+                    displayProjects(allProjects, 'All Projects');
+                }
             }
 
             // Update Sidebar State (Login vs Logout)
